fixed p.desc on mobile

--- a/style.css
+++ b/style.css
@@ -929,11 +929,16 @@ textarea:focus {
     .logo-sm {
         display: none;
     }
+   
 }
 
 @media only screen and (max-width: 574px) {
     footer {
         margin-bottom: 80px;
+    }
+    .desc {
+        font-size: 16px;
+        color: #404040;
     }
 
     .showcase {
